--- a/Substation Builder/Oneline.xaml
+++ b/Substation Builder/Oneline.xaml
@@ -27,9 +27,6 @@
 
     </Controls:MetroWindow.Resources>
 
-    
-    
-
     <Grid x:Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition Height="75"/>
@@ -66,15 +63,15 @@
                             </Rectangle.Fill>
                         </Rectangle>
                     </Button>
-                    
-                    <Button Grid.Column="1" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center">
+
+                    <Button Grid.Column="1" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center" Click="LoadFile">
                         <Rectangle Height="30" Width="30" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <Rectangle.Fill>
                                 <VisualBrush Visual="{StaticResource appbar_folder_open}" Stretch="Uniform"/>
                             </Rectangle.Fill>
                         </Rectangle>
                     </Button>
-                    
+
                     <Button Grid.Column="2" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <Rectangle Height="22" Width="25" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <Rectangle.Fill>
@@ -82,7 +79,6 @@
                             </Rectangle.Fill>
                         </Rectangle>
                     </Button>
-                    
                 </Grid>
             </Controls:MetroTabItem>
             
