--- a/Substation Builder/Oneline.xaml
+++ b/Substation Builder/Oneline.xaml
@@ -72,7 +72,7 @@
                         </Rectangle>
                     </Button>
 
-                    <Button Grid.Column="2" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Button Grid.Column="2" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center" Click="SaveFile">
                         <Rectangle Height="22" Width="25" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <Rectangle.Fill>
                                 <VisualBrush Visual="{StaticResource appbar_save}" Stretch="Uniform"/>
