--- a/Substation Builder/Oneline.xaml
+++ b/Substation Builder/Oneline.xaml
@@ -131,17 +131,17 @@
 
                 </Grid>
             </Controls:MetroTabItem>
-            
+
             <Controls:MetroTabItem Name="tab4" Content="REVIEW" Header="REVIEW" TabIndex="4"/>
         </Controls:MetroAnimatedSingleRowTabControl>
 
         <Grid x:Name="grid1" Margin="1,1,1,1" Grid.Row="1">
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="90"/>
             </Grid.ColumnDefinitions>
-            
+
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
@@ -149,45 +149,85 @@
             <Grid Grid.Column="0">
                 <Grid>
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="250"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-
-
-
-                    <TextBox Grid.Row="0" Text="{Binding Path=Name, Mode=TwoWay}"/>
-
-
-                    <TreeView Grid.Row="1" x:Name="treeView" Height="Auto" Width="Auto" Background="#FF5F3232">
-
-                        <TreeViewItem Header="{Binding Path=Name}" Background="#FFC90808"/>
+                    <TreeView Grid.Row="1" x:Name="treeview" Background="#FF5F3232">
 
                     </TreeView>
 
                 </Grid>
 
             </Grid>
-            <WrapPanel Grid.Column="1">
-
-                <Controls:Tile Count="4" Title="Transformer" Width="Auto" Height="Auto" VerticalTitleAlignment="Stretch" Foreground="#FFF9F3F3" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="8" Click="Tile_Click">
+            <StackPanel Grid.Column="1">
+                <Controls:Tile Title="System" Width="Auto" Height="Auto" VerticalTitleAlignment="Center" Foreground="#FFF9F3F3" Click="Tile_Click" TitleFontSize="13" HorizontalTitleAlignment="Center" Margin="2,3,2,1">
+                    <Controls:Tile.OpacityMask>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0"/>
+                            <GradientStop Color="White" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Controls:Tile.OpacityMask>
                     <Controls:Tile.Background>
-                        <ImageBrush ImageSource="Resources\xfmr.png" Stretch="Uniform"/>
+                        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0.498"/>
+                            <GradientStop Color="#FFB8AFAF" Offset="0.99"/>
+                            <GradientStop Color="#FF706666" Offset="0.102"/>
+                        </LinearGradientBrush>
                     </Controls:Tile.Background>
                 </Controls:Tile>
 
-            </WrapPanel>
+                <Controls:Tile Title="Thevenin" Width="Auto" Height="Auto" VerticalTitleAlignment="Center" Foreground="#FFF9F3F3" Click="Tile_Click" HorizontalTitleAlignment="Center" TitleFontSize="13" Margin="2,2,2,1">
+                    <Controls:Tile.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0.498"/>
+                            <GradientStop Color="#FFB8AFAF" Offset="0.99"/>
+                            <GradientStop Color="#FF706666" Offset="0.102"/>
+                        </LinearGradientBrush>
+                    </Controls:Tile.Background>
+                </Controls:Tile>
 
+                <Controls:Tile Title="Transformer" Width="Auto" Height="Auto" Foreground="#FFF9F3F3" Click="Tile_Click" Margin="2,2,2,1" TitleFontSize="13" HorizontalTitleAlignment="Center" VerticalTitleAlignment="Center">
+                    <Controls:Tile.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0.498"/>
+                            <GradientStop Color="#FFB8AFAF" Offset="0.99"/>
+                            <GradientStop Color="#FF706666" Offset="0.102"/>
+                        </LinearGradientBrush>
+                    </Controls:Tile.Background>
+                </Controls:Tile>
+                <Controls:Tile Title="Breaker" Width="Auto" Height="Auto" VerticalTitleAlignment="Center" Foreground="#FFF9F3F3" Click="Tile_Click" TitleFontSize="13" HorizontalTitleAlignment="Center" Margin="2,2,2,1">
+                    <Controls:Tile.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0.498"/>
+                            <GradientStop Color="#FFB8AFAF" Offset="0.99"/>
+                            <GradientStop Color="#FF706666" Offset="0.102"/>
+                        </LinearGradientBrush>
+                    </Controls:Tile.Background>
+                </Controls:Tile>
+                <Controls:Tile Title="CT" Width="Auto" Height="Auto" VerticalTitleAlignment="Center" Foreground="#FFF9F3F3" Click="Tile_Click" TitleFontSize="13" HorizontalTitleAlignment="Center" Margin="2,2,2,1">
+                    <Controls:Tile.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0.498"/>
+                            <GradientStop Color="#FFB8AFAF" Offset="0.99"/>
+                            <GradientStop Color="#FF706666" Offset="0.102"/>
+                        </LinearGradientBrush>
+                    </Controls:Tile.Background>
+                </Controls:Tile>
+                <Controls:Tile Title="Relay" Width="Auto" Height="Auto" VerticalTitleAlignment="Stretch" Foreground="#FFF9F3F3" Click="Tile_Click" TitleFontSize="13" HorizontalTitleAlignment="Center" Margin="2,2,2,1">
+                    <Controls:Tile.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0.498"/>
+                            <GradientStop Color="#FFB8AFAF" Offset="0.99"/>
+                            <GradientStop Color="#FF706666" Offset="0.102"/>
+                        </LinearGradientBrush>
+                    </Controls:Tile.Background>
+                </Controls:Tile>
+
+            </StackPanel>
         </Grid>
 
-        
-        
     </Grid>
-
-
 
 </Controls:MetroWindow>
     
