--- a/Substation Builder/Oneline.xaml
+++ b/Substation Builder/Oneline.xaml
@@ -4,7 +4,8 @@
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:this="clr-namespace:Substation_Builder.DataModel"
+                      xmlns:local="clr-namespace:Substation_Builder.DataModel"
+   
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                       mc:Ignorable="d"
                       Icon="Resources\Images\MainPageIcon.jpg"    
@@ -20,19 +21,15 @@
                    FontSize="20px" Margin="20,0,0,0"/>
         </DataTemplate>
     </Controls:MetroWindow.TitleTemplate>
-
-
-
+    
     <Controls:MetroWindow.Resources>
         <mah:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
-        
+
         <Style TargetType="{x:Type Controls:MetroTabItem}">
             <Setter Property="Controls:ControlsHelper.HeaderFontSize" Value="15"/>
         </Style>
-
-
     </Controls:MetroWindow.Resources>
-    
+
     <Controls:MetroWindow.Background>
         <ImageBrush ImageSource="Resources/Images/Chiyome_Mochizuki.jpg" Opacity="0.25" Stretch="UniformToFill">
             <ImageBrush.RelativeTransform>
@@ -50,7 +47,7 @@
 
         <Controls:MetroAnimatedSingleRowTabControl x:Name="metroAnimatedSingleRowTabControl" Width="{Binding ActualWidth, ElementName=stackPanel, Mode=OneWay}" HorizontalAlignment="Left" Height="{Binding ActualHeight, ElementName=stackPanel, Mode=OneWay}">
 
-            <Controls:MetroTabItem Name="tab1" Header="DATABASE" TabIndex="1">
+            <Controls:MetroTabItem Name="tab1" Header="DATABASE" TabIndex="1" Background="{x:Null}">
 
                 <Grid Margin="2">
                     <Grid.RowDefinitions>
@@ -70,13 +67,11 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
+                        <TextBlock Grid.Column="0" Grid.Row="1" Text="NEW" FontSize="10" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.9"/>
+                        <TextBlock Grid.Column="1" Grid.Row="1" Text="OPEN" FontSize="10" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.9"/>
+                        <TextBlock Grid.Column="2" Grid.Row="1" Text="SAVE" FontSize="10" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.9"/>
 
-
-                        <TextBlock Grid.Column="0" Grid.Row="1" Text="NEW" FontSize="10" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Column="1" Grid.Row="1" Text="OPEN" FontSize="10" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Column="2" Grid.Row="1" Text="SAVE" FontSize="10" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
-                        <Button Grid.Column="0" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center" Click="NewFile">
+                        <Button Grid.Column="0" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center" Click="NewFile" Opacity="0.9" Background="{x:Null}">
                             <Rectangle Height="30" Width="30" HorizontalAlignment="Center" VerticalAlignment="Center">
                                 <Rectangle.Fill>
                                     <VisualBrush Visual="{StaticResource appbar_app_plus}" Stretch="Uniform"/>
@@ -84,7 +79,7 @@
                             </Rectangle>
                         </Button>
 
-                        <Button Grid.Column="1" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center" Click="LoadFile">
+                        <Button Grid.Column="1" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center" Click="LoadFile" Opacity="0.9" Background="{x:Null}">
                             <Rectangle Height="30" Width="30" HorizontalAlignment="Center" VerticalAlignment="Center">
                                 <Rectangle.Fill>
                                     <VisualBrush Visual="{StaticResource appbar_folder_open}" Stretch="Uniform"/>
@@ -92,7 +87,7 @@
                             </Rectangle>
                         </Button>
 
-                        <Button Grid.Column="2" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center" Click="SaveFile">
+                        <Button Grid.Column="2" Grid.Row="0" Height="35" Width="40" HorizontalAlignment="Center" VerticalAlignment="Center" Click="SaveFile" Opacity="0.9" Background="{x:Null}">
                             <Rectangle Height="22" Width="25" HorizontalAlignment="Center" VerticalAlignment="Center">
                                 <Rectangle.Fill>
                                     <VisualBrush Visual="{StaticResource appbar_save}" Stretch="Uniform"/>
@@ -101,7 +96,7 @@
                         </Button>
                     </Grid>
 
-                    <Grid Margin="1,1,1,10" Grid.Row="1" >
+                    <Grid Margin="1,1,1,0" Grid.Row="1" >
 
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
@@ -119,33 +114,46 @@
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
 
-                                <TreeView Grid.Column="0">
+
+                                <TreeView>
+                                    <TreeViewItem Header="{Binding Name}">
+                                        <TreeViewItem Header="Thevenin"/>
+                                        <TreeViewItem Header="Transformers" ItemsSource="{Binding Transformer.Name}"/>
+
+
+
+
+                                    </TreeViewItem>
+
 
                                 </TreeView>
 
-                                <Frame Grid.Column="1" x:Name="DatabasePanel" Grid.ColumnSpan="2"/>
+
+                                <Frame Grid.Column="1" x:Name="DatabasePanel" Grid.ColumnSpan="2" NavigationUIVisibility="Hidden">
+
+                                </Frame>
 
                             </Grid>
                         </Grid>
                         <StackPanel Grid.Column="1" Margin="5,0,5,5">
                             <Label Content="System" HorizontalContentAlignment="Center" HorizontalAlignment="Center"/>
-                            <Button Content="Thevenin" Click="Thevenin_Page"/>
+                            <Button Name="Thevenin" Content="Thevenin" Click="Thevenin_Page" Foreground="White" Background="{x:Null}" Margin="5,0" Opacity="0.9"/>
                             <Label Content="New" HorizontalContentAlignment="Center" HorizontalAlignment="Center"/>
-                            <Button Content="Transformer"/>
-                            <Button Content="Breaker"/>
-                            <Button Content="CT"/>
-                            <Button Content="Relay"/>
-                            <Button Content="Lock Out"/>
+                            <Button Content="Transformer" Background="{x:Null}" Margin="2,0,2,2" Opacity="0.9" Click="Transformer_Page"/>
+                            <Button Content="Breaker" Background="{x:Null}" Margin="2" Opacity="0.9"/>
+                            <Button Content="CT" Margin="2" Background="{x:Null}" Opacity="0.9"/>
+                            <Button Content="Relay" Margin="2" Background="{x:Null}" Opacity="0.9"/>
+                            <Button Content="Lock Out" Margin="2,2,2,0" Background="{x:Null}" Opacity="0.9"/>
                         </StackPanel>
                     </Grid>
                 </Grid>
             </Controls:MetroTabItem>
 
-            <Controls:MetroTabItem Name="tab2" Header="HOME"  TabIndex="2">
+            <Controls:MetroTabItem Name="tab2" Header="HOME"  TabIndex="2" Background="{x:Null}" >
 
             </Controls:MetroTabItem>
 
-            <Controls:MetroTabItem Name="tab3" Header="DRAWING" TabIndex="3">
+            <Controls:MetroTabItem Name="tab3" Header="DRAWING" TabIndex="3" Background="{x:Null}" >
 
                 <Grid Margin="1,1,1,1">
                     <Grid.ColumnDefinitions>
@@ -191,7 +199,7 @@
                 </Grid>
             </Controls:MetroTabItem>
 
-            <Controls:MetroTabItem Name="tab4" Content="REVIEW" Header="REVIEW" TabIndex="4"/>
+            <Controls:MetroTabItem Name="tab4" Content="REVIEW" Header="REVIEW" TabIndex="4" Background="{x:Null}" />
 
         </Controls:MetroAnimatedSingleRowTabControl>
 
